--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,11 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 BAIDU_TRANSLATE_APPID=
 BAIDU_TRANSLATE_KEY=
+
+
+# dingo config
+API_STANDARDS_TREE=
+API_SUBTYPE=
+API_PREFIX=
+API_VERSION=
+API_DEBUG=
